<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/title_newPIN"
        android:textStyle="bold" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pinIntro"
        android:layout_below="@+id/title"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/prompt_newPIN"
        android:layout_below="@+id/pinIntro"
        android:id="@+id/new_pin_label"
        android:layout_marginTop="6dp"/>
    <EditText android:layout_height="wrap_content"
        android:maxLength="4"
        android:layout_width="fill_parent"
        android:id="@+id/pin"
        android:inputType="number"
        android:password="true"
        android:layout_below="@+id/new_pin_label"/>

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/prompt_confirmPIN"
        android:layout_below="@+id/pin"
        android:id="@+id/confirm_pin_label"
        android:layout_marginTop="6dp"/>
    <EditText android:layout_height="wrap_content"
        android:maxLength="4"
        android:id="@+id/pinConfirm"
        android:layout_width="fill_parent"
        android:password="true"
        android:inputType="number"
        android:layout_below="@+id/confirm_pin_label"/>

    <View android:layout_height="1dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="?android:attr/dividerVertical"
        android:layout_above="@+id/buttons"/>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:layout_alignParentBottom="true"
        style="?android:attr/buttonBarStyle">

        <Button android:id="@+id/ok"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/label_OK"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    </RelativeLayout>