<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/title_securityCode"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/otp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold" />

    <ProgressBar
            android:id="@+id/countdown"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:indeterminate="false"
            android:max="30"
            android:progress="30" />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countdown"
            android:gravity="center_horizontal"
            android:text="@string/label_lifetime"
            android:textStyle="bold" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/buttons"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="?android:attr/dividerVertical" />

    <LinearLayout
            android:id="@+id/buttons"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/qr_code"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_scan_qr_code" />

        <Button
                android:id="@+id/ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_new_transactions" />
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/TransactionListLayout"
            android:layout_width="match_parent"
            android:layout_height="344dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="71dp"
            android:background="@android:color/black">

        <TextView
                android:id="@+id/TransactionsListHeadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:text="@string/pending_transactions"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PendingTransactionsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/TransactionsListHeadding"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:background="@android:color/white" />

    </RelativeLayout>
</RelativeLayout>
